// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`cas1 status card content placement history renders previous placements 1`] = `
[
  {
    "html": "

  <details class="govuk-details govuk-!-margin-bottom-1">
  <summary class="govuk-details__summary">
    <span class="govuk-details__summary-text">
      5 previous placements on this application
    </span>
  </summary>
  <div class="govuk-details__text">
    
    <ul class="govuk-list govuk-list--bullet">
      
        <li>Request withdrawn (20 June 2026). Reason: Their circumstances changed</li>
      
        <li>Departed (20 May 2026 to 20 June 2026)</li>
      
        <li>Not arrived (due 21 May 2026)</li>
      
        <li>Cancelled. Reason: No longer needed</li>
      
        <li>Request rejected. Reason: Placement unsuitable</li>
      
    </ul>
  
  </div>
</details>
",
  },
]
`;

exports[`cas1 status card details renders detail rows for a APPLICATION_REJECTED status 1`] = `
[
  {
    "key": {
      "text": "Decision",
    },
    "value": {
      "text": "Reject, Not enough detail",
    },
  },
  {
    "key": {
      "text": "Submitted",
    },
    "value": {
      "text": "2 June 2026 (60 days ago)",
    },
  },
  {
    "key": {
      "text": "Submitted by",
    },
    "value": {
      "text": "Joe Bloggs",
    },
  },
]
`;

exports[`cas1 status card details renders detail rows for a ARRIVED status 1`] = `
[
  {
    "key": {
      "text": "Arrival date",
    },
    "value": {
      "text": "1 September 2026 (in 31 days)",
    },
  },
  {
    "key": {
      "text": "Expected departure",
    },
    "value": {
      "text": "27 October 2026 (in 87 days)",
    },
  },
  {
    "key": {
      "text": "Request submitted by",
    },
    "value": {
      "text": "Joe Bloggs",
    },
  },
]
`;

exports[`cas1 status card details renders detail rows for a INFO_REQUESTED status 1`] = `
[
  {
    "key": {
      "text": "Submitted",
    },
    "value": {
      "text": "2 June 2026 (60 days ago)",
    },
  },
  {
    "key": {
      "text": "Submitted by",
    },
    "value": {
      "text": "Joe Bloggs",
    },
  },
]
`;

exports[`cas1 status card details renders detail rows for a NOT_ARRIVED status 1`] = `
[
  {
    "key": {
      "text": "Expected arrival",
    },
    "value": {
      "text": "9 September 2026 (in 39 days)",
    },
  },
  {
    "key": {
      "text": "Request submitted by",
    },
    "value": {
      "text": "Joe Bloggs",
    },
  },
  {
    "key": {
      "text": "Application expires",
    },
    "value": {
      "text": "29 January 2027",
    },
  },
]
`;

exports[`cas1 status card details renders detail rows for a NOT_SUBMITTED status 1`] = `
[
  {
    "key": {
      "text": "Application started",
    },
    "value": {
      "text": "1 June 2026 (61 days ago)",
    },
  },
  {
    "key": {
      "text": "Started by",
    },
    "value": {
      "text": "Joe Bloggs",
    },
  },
]
`;

exports[`cas1 status card details renders detail rows for a PLACEMENT_BOOKED status 1`] = `
[
  {
    "key": {
      "text": "Expected arrival",
    },
    "value": {
      "text": "9 September 2026 (in 39 days)",
    },
  },
  {
    "key": {
      "text": "Duration",
    },
    "value": {
      "text": "8 weeks",
    },
  },
  {
    "key": {
      "text": "Request submitted by",
    },
    "value": {
      "text": "Joe Bloggs",
    },
  },
]
`;

exports[`cas1 status card details renders detail rows for a PLACEMENT_CANCELLED status 1`] = `
[
  {
    "key": {
      "text": "Cancellation reason",
    },
    "value": {
      "text": "Over capacity",
    },
  },
  {
    "key": {
      "text": "Expected arrival",
    },
    "value": {
      "text": "9 September 2026 (in 39 days)",
    },
  },
  {
    "key": {
      "text": "Request submitted by",
    },
    "value": {
      "text": "Joe Bloggs",
    },
  },
  {
    "key": {
      "text": "Application expires",
    },
    "value": {
      "text": "29 January 2027",
    },
  },
]
`;

exports[`cas1 status card details renders detail rows for a PLACEMENT_REQUEST_NOT_STARTED status 1`] = `
[
  {
    "key": {
      "text": "Submitted by",
    },
    "value": {
      "text": "Joe Bloggs",
    },
  },
  {
    "key": {
      "text": "Application expires",
    },
    "value": {
      "text": "29 January 2027",
    },
  },
]
`;

exports[`cas1 status card details renders detail rows for a PLACEMENT_REQUEST_REJECTED status 1`] = `
[
  {
    "key": {
      "text": "Rejection reason",
    },
    "value": {
      "text": "Over capacity",
    },
  },
  {
    "key": {
      "text": "Request submitted",
    },
    "value": {
      "text": "10 June 2026 (52 days ago)",
    },
  },
  {
    "key": {
      "text": "Request submitted by",
    },
    "value": {
      "text": "Joe Bloggs",
    },
  },
  {
    "key": {
      "text": "Application expires",
    },
    "value": {
      "text": "29 January 2027",
    },
  },
]
`;

exports[`cas1 status card details renders detail rows for a PLACEMENT_REQUEST_SUBMITTED status 1`] = `
[
  {
    "key": {
      "text": "Request submitted",
    },
    "value": {
      "text": "10 June 2026 (52 days ago)",
    },
  },
  {
    "key": {
      "text": "Request submitted by",
    },
    "value": {
      "text": "Joe Bloggs",
    },
  },
  {
    "key": {
      "text": "Application expires",
    },
    "value": {
      "text": "29 January 2027",
    },
  },
]
`;

exports[`cas1 status card details renders detail rows for a PLACEMENT_REQUEST_WITHDRAWN status 1`] = `
[
  {
    "key": {
      "text": "Withdrawal reason",
    },
    "value": {
      "text": "There was an error in the request",
    },
  },
  {
    "key": {
      "text": "Request submitted",
    },
    "value": {
      "text": "10 June 2026 (52 days ago)",
    },
  },
  {
    "key": {
      "text": "Request submitted by",
    },
    "value": {
      "text": "Joe Bloggs",
    },
  },
  {
    "key": {
      "text": "Application expires",
    },
    "value": {
      "text": "29 January 2027",
    },
  },
]
`;

exports[`cas1 status card details renders detail rows for a SUBMITTED status 1`] = `
[
  {
    "key": {
      "text": "Submitted",
    },
    "value": {
      "text": "2 June 2026 (60 days ago)",
    },
  },
  {
    "key": {
      "text": "Submitted by",
    },
    "value": {
      "text": "Joe Bloggs",
    },
  },
]
`;

exports[`cas2 status card content renders the find out more link when not started 1`] = `
[
  {
    "html": "<p class="govuk-!-margin-bottom-1">Available in these circumstances:</p>
      <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-0">
        
      <li>Homeless at conditional release date</li>
      <li>Homeless at end of fixed-term recall</li>
      <li>As part of risk-assessed recall review</li>
      </ul>",
  },
  {
    "html": "<a class="govuk-body govuk-link govuk-link--no-visited-state" href="#" target="_blank" rel="noreferrer noopener">Find out more about CAS2 (opens in new tab)</a>",
  },
]
`;

exports[`cas2 status card details renders detail rows for a AWAITING_ARRIVAL status 1`] = `
[
  {
    "key": {
      "text": "Submitted",
    },
    "value": {
      "text": "2 June 2026 (60 days ago)",
    },
  },
  {
    "key": {
      "text": "Submitted by",
    },
    "value": {
      "text": "Joe Bloggs",
    },
  },
]
`;

exports[`cas2 status card details renders detail rows for a AWAITING_DECISION status 1`] = `
[
  {
    "key": {
      "text": "Submitted",
    },
    "value": {
      "text": "2 June 2026 (60 days ago)",
    },
  },
  {
    "key": {
      "text": "Submitted by",
    },
    "value": {
      "text": "Joe Bloggs",
    },
  },
]
`;

exports[`cas2 status card details renders detail rows for a CANCELLED status 1`] = `
[
  {
    "key": {
      "text": "Reason",
    },
    "value": {
      "text": "Application cancelled",
    },
  },
  {
    "key": {
      "text": "Submitted",
    },
    "value": {
      "text": "2 June 2026 (60 days ago)",
    },
  },
  {
    "key": {
      "text": "Submitted by",
    },
    "value": {
      "text": "Joe Bloggs",
    },
  },
]
`;

exports[`cas2 status card details renders detail rows for a MORE_INFORMATION_NEEDED status 1`] = `
[
  {
    "key": {
      "text": "Submitted",
    },
    "value": {
      "text": "2 June 2026 (60 days ago)",
    },
  },
  {
    "key": {
      "text": "Submitted by",
    },
    "value": {
      "text": "Joe Bloggs",
    },
  },
]
`;

exports[`cas2 status card details renders detail rows for a NOT_SUBMITTED status 1`] = `
[
  {
    "key": {
      "text": "Application started",
    },
    "value": {
      "text": "1 June 2026 (61 days ago)",
    },
  },
  {
    "key": {
      "text": "Started by",
    },
    "value": {
      "text": "Joe Bloggs",
    },
  },
]
`;

exports[`cas2 status card details renders detail rows for a OFFER_ACCEPTED status 1`] = `
[
  {
    "key": {
      "text": "Submitted",
    },
    "value": {
      "text": "2 June 2026 (60 days ago)",
    },
  },
  {
    "key": {
      "text": "Submitted by",
    },
    "value": {
      "text": "Joe Bloggs",
    },
  },
]
`;

exports[`cas2 status card details renders detail rows for a OFFER_DECLINED_OR_WITHDRAWN status 1`] = `
[
  {
    "key": {
      "text": "Reason",
    },
    "value": {
      "text": "Offer unsuitable",
    },
  },
  {
    "key": {
      "text": "Submitted",
    },
    "value": {
      "text": "2 June 2026 (60 days ago)",
    },
  },
  {
    "key": {
      "text": "Submitted by",
    },
    "value": {
      "text": "Joe Bloggs",
    },
  },
]
`;

exports[`cas2 status card details renders detail rows for a ON_WAITING_LIST status 1`] = `
[
  {
    "key": {
      "text": "Submitted",
    },
    "value": {
      "text": "2 June 2026 (60 days ago)",
    },
  },
  {
    "key": {
      "text": "Submitted by",
    },
    "value": {
      "text": "Joe Bloggs",
    },
  },
]
`;

exports[`cas2 status card details renders detail rows for a PLACE_OFFERED status 1`] = `
[
  {
    "key": {
      "text": "Submitted",
    },
    "value": {
      "text": "2 June 2026 (60 days ago)",
    },
  },
  {
    "key": {
      "text": "Submitted by",
    },
    "value": {
      "text": "Joe Bloggs",
    },
  },
]
`;

exports[`cas2 status card details renders detail rows for a SUBMITTED status 1`] = `
[
  {
    "key": {
      "text": "Submitted",
    },
    "value": {
      "text": "2 June 2026 (60 days ago)",
    },
  },
  {
    "key": {
      "text": "Submitted by",
    },
    "value": {
      "text": "Joe Bloggs",
    },
  },
]
`;

exports[`cas2 status card details renders detail rows for a WITHDRAWN status 1`] = `
[
  {
    "key": {
      "text": "Submitted",
    },
    "value": {
      "text": "2 June 2026 (60 days ago)",
    },
  },
  {
    "key": {
      "text": "Submitted by",
    },
    "value": {
      "text": "Joe Bloggs",
    },
  },
]
`;

exports[`cas3 status card content previous bookings renders previous bookings 1`] = `
[
  {
    "html": "

  <details class="govuk-details govuk-!-margin-bottom-1">
  <summary class="govuk-details__summary">
    <span class="govuk-details__summary-text">
      2 previous bookings on this application
    </span>
  </summary>
  <div class="govuk-details__text">
    
    <ul class="govuk-list govuk-list--bullet">
      
        <li>Booking cancelled 20 June 2026. Reason: No longer needed</li>
      
        <li>Booking cancelled. Reason: No longer needed</li>
      
    </ul>
  
  </div>
</details>
",
  },
]
`;

exports[`cas3 status card details renders detail rows for a ARRIVED status 1`] = `
[
  {
    "key": {
      "text": "Arrival date",
    },
    "value": {
      "text": "2026-09-01",
    },
  },
  {
    "key": {
      "text": "Expected departure date",
    },
    "value": {
      "text": "2026-10-27",
    },
  },
  {
    "key": {
      "text": "Referral submitted by",
    },
    "value": {
      "text": "Joe Bloggs",
    },
  },
]
`;

exports[`cas3 status card details renders detail rows for a BEDSPACE_OFFERED status 1`] = `
[
  {
    "key": {
      "text": "Provisional offer sent",
    },
    "value": {
      "text": "2026-06-15",
    },
  },
  {
    "key": {
      "text": "Referral submitted by",
    },
    "value": {
      "text": "Joe Bloggs",
    },
  },
]
`;

exports[`cas3 status card details renders detail rows for a BOOKING_CANCELLED status 1`] = `
[
  {
    "key": {
      "text": "Cancellation reason",
    },
    "value": {
      "text": "No longer needed",
    },
  },
  {
    "key": {
      "text": "Booking dates",
    },
    "value": {
      "text": "1 September 2026 to 27 October 2026",
    },
  },
  {
    "key": {
      "text": "Referral submitted by",
    },
    "value": {
      "text": "Joe Bloggs",
    },
  },
]
`;

exports[`cas3 status card details renders detail rows for a BOOKING_CONFIRMED status 1`] = `
[
  {
    "key": {
      "text": "Address",
    },
    "value": {
      "text": "LS1 1AA",
    },
  },
  {
    "key": {
      "text": "Booking dates",
    },
    "value": {
      "text": "1 September 2026 to 27 October 2026",
    },
  },
  {
    "key": {
      "text": "Referral submitted by",
    },
    "value": {
      "text": "Joe Bloggs",
    },
  },
]
`;

exports[`cas3 status card details renders detail rows for a NOT_STARTED status 1`] = `[]`;

exports[`cas3 status card details renders detail rows for a REJECTED status 1`] = `
[
  {
    "key": {
      "text": "Rejection reason",
    },
    "value": {
      "text": "",
    },
  },
  {
    "key": {
      "text": "Submitted",
    },
    "value": {
      "text": "2026-06-02",
    },
  },
  {
    "key": {
      "text": "Submitted by",
    },
    "value": {
      "text": "Joe Bloggs",
    },
  },
]
`;

exports[`cas3 status card details renders detail rows for a SUBMITTED status 1`] = `
[
  {
    "key": {
      "text": "Submitted",
    },
    "value": {
      "text": "2026-06-02",
    },
  },
  {
    "key": {
      "text": "Submitted by",
    },
    "value": {
      "text": "Joe Bloggs",
    },
  },
]
`;

exports[`eligibilityStatusCard cas2 NOT_STARTED should show content for people in AP 1`] = `
{
  "blocked": false,
  "content": [
    {
      "html": "<p class="govuk-!-margin-bottom-1">Available in these circumstances:</p>
      <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-0">
        
      <li>Homeless at conditional release date</li>
      <li>Homeless at end of fixed-term recall</li>
      <li>As part of risk-assessed recall review</li>
      </ul>",
    },
    {
      "html": "<a class="govuk-body govuk-link govuk-link--no-visited-state" href="#" target="_blank" rel="noreferrer noopener">Find out more about CAS2 (opens in new tab)</a>",
    },
  ],
  "details": [],
  "heading": "Short-term accommodation (CAS2)",
  "hint": undefined,
  "inactive": false,
  "links": [
    {
      "external": true,
      "href": "https://example.gov.uk/start",
      "text": "Start application",
    },
  ],
  "status": {
    "colour": "orange",
    "text": "Not started",
  },
}
`;

exports[`eligibilityStatusCard cas2 NOT_STARTED should show content for people not in AP 1`] = `
{
  "blocked": false,
  "content": [
    {
      "html": "<p class="govuk-!-margin-bottom-1">Available in these circumstances:</p>
      <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-0">
        
      <li>Homeless at conditional release date</li>
      <li>Homeless at end of fixed-term recall</li>
      <li>As part of risk-assessed recall review</li>
      </ul>",
    },
    {
      "html": "<a class="govuk-body govuk-link govuk-link--no-visited-state" href="#" target="_blank" rel="noreferrer noopener">Find out more about CAS2 (opens in new tab)</a>",
    },
  ],
  "details": [],
  "heading": "Short-term accommodation (CAS2)",
  "hint": undefined,
  "inactive": false,
  "links": [
    {
      "external": true,
      "href": "https://example.gov.uk/start",
      "text": "Start application",
    },
  ],
  "status": {
    "colour": "orange",
    "text": "Not started",
  },
}
`;

exports[`eligibilityStatusCard for cas1 renders a APPLICATION_REJECTED status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [
    {
      "key": {
        "text": "Decision",
      },
      "value": {
        "text": "Reject, Not enough detail",
      },
    },
    {
      "key": {
        "text": "Submitted",
      },
      "value": {
        "text": "2 June 2026 (59 days ago)",
      },
    },
    {
      "key": {
        "text": "Submitted by",
      },
      "value": {
        "text": "Joe Bloggs",
      },
    },
  ],
  "heading": "Approved premises (CAS1)",
  "hint": undefined,
  "inactive": false,
  "links": [
    {
      "external": true,
      "href": "https://example.com/start",
      "text": "Start new application",
    },
  ],
  "status": {
    "colour": "orange",
    "text": "Application rejected",
  },
}
`;

exports[`eligibilityStatusCard for cas1 renders a INFO_REQUESTED status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [
    {
      "key": {
        "text": "Submitted",
      },
      "value": {
        "text": "2 June 2026 (59 days ago)",
      },
    },
    {
      "key": {
        "text": "Submitted by",
      },
      "value": {
        "text": "Joe Bloggs",
      },
    },
  ],
  "heading": "Approved premises (CAS1)",
  "hint": undefined,
  "inactive": false,
  "links": [
    {
      "external": true,
      "href": "https://example.com/view",
      "text": "View application",
    },
  ],
  "status": {
    "colour": "yellow",
    "text": "Info requested",
  },
}
`;

exports[`eligibilityStatusCard for cas1 renders a NOT_ARRIVED status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [
    {
      "key": {
        "text": "Expected arrival",
      },
      "value": {
        "text": "9 September 2026 (in 40 days)",
      },
    },
    {
      "key": {
        "text": "Request submitted by",
      },
      "value": {
        "text": "Joe Bloggs",
      },
    },
    {
      "key": {
        "text": "Application expires",
      },
      "value": {
        "text": "29 January 2027",
      },
    },
  ],
  "heading": "Approved premises (CAS1)",
  "hint": undefined,
  "inactive": false,
  "links": [
    {
      "external": true,
      "href": "https://example.com/create-new-placement-request",
      "text": "Create new placement request",
    },
  ],
  "status": {
    "colour": "orange",
    "text": "Not arrived",
  },
}
`;

exports[`eligibilityStatusCard for cas1 renders a NOT_ELIGIBLE status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [],
  "heading": "Approved premises (CAS1)",
  "hint": "Tier not eligible for this level of supervision.",
  "inactive": true,
  "links": undefined,
  "status": {
    "colour": "grey",
    "text": "Not eligible",
  },
}
`;

exports[`eligibilityStatusCard for cas1 renders a NOT_STARTED status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [],
  "heading": "Approved premises (CAS1)",
  "hint": undefined,
  "inactive": false,
  "links": [
    {
      "external": true,
      "href": "https://example.com/start",
      "text": "Start application",
    },
  ],
  "status": {
    "colour": "orange",
    "text": "Not started",
  },
}
`;

exports[`eligibilityStatusCard for cas1 renders a NOT_SUBMITTED status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [
    {
      "key": {
        "text": "Application started",
      },
      "value": {
        "text": "1 June 2026 (60 days ago)",
      },
    },
    {
      "key": {
        "text": "Started by",
      },
      "value": {
        "text": "Joe Bloggs",
      },
    },
  ],
  "heading": "Approved premises (CAS1)",
  "hint": undefined,
  "inactive": false,
  "links": [
    {
      "external": true,
      "href": "https://example.com/continue",
      "text": "Continue application",
    },
  ],
  "status": {
    "colour": "orange",
    "text": "Not submitted",
  },
}
`;

exports[`eligibilityStatusCard for cas1 renders a PLACEMENT_BOOKED status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [
    {
      "key": {
        "text": "Expected arrival",
      },
      "value": {
        "text": "9 September 2026 (in 40 days)",
      },
    },
    {
      "key": {
        "text": "Duration",
      },
      "value": {
        "text": "8 weeks",
      },
    },
    {
      "key": {
        "text": "Request submitted by",
      },
      "value": {
        "text": "Joe Bloggs",
      },
    },
  ],
  "heading": "Approved premises (CAS1)",
  "hint": undefined,
  "inactive": false,
  "links": [
    {
      "external": true,
      "href": "https://example.com/view",
      "text": "View application",
    },
  ],
  "status": {
    "colour": "green",
    "text": "Placement booked",
  },
}
`;

exports[`eligibilityStatusCard for cas1 renders a PLACEMENT_CANCELLED status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [
    {
      "key": {
        "text": "Cancellation reason",
      },
      "value": {
        "text": "Over capacity",
      },
    },
    {
      "key": {
        "text": "Expected arrival",
      },
      "value": {
        "text": "9 September 2026 (in 40 days)",
      },
    },
    {
      "key": {
        "text": "Request submitted by",
      },
      "value": {
        "text": "Joe Bloggs",
      },
    },
    {
      "key": {
        "text": "Application expires",
      },
      "value": {
        "text": "29 January 2027",
      },
    },
  ],
  "heading": "Approved premises (CAS1)",
  "hint": undefined,
  "inactive": false,
  "links": [
    {
      "external": true,
      "href": "https://example.com/create-new-placement-request",
      "text": "Create new placement request",
    },
  ],
  "status": {
    "colour": "orange",
    "text": "Placement cancelled",
  },
}
`;

exports[`eligibilityStatusCard for cas1 renders a PLACEMENT_REQUEST_NOT_STARTED status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [
    {
      "key": {
        "text": "Submitted by",
      },
      "value": {
        "text": "Joe Bloggs",
      },
    },
    {
      "key": {
        "text": "Application expires",
      },
      "value": {
        "text": "29 January 2027",
      },
    },
  ],
  "heading": "Approved premises (CAS1)",
  "hint": undefined,
  "inactive": false,
  "links": [
    {
      "external": true,
      "href": "https://example.com/create-placement-request",
      "text": "Create placement request",
    },
  ],
  "status": {
    "colour": "orange",
    "text": "Placement request not started",
  },
}
`;

exports[`eligibilityStatusCard for cas1 renders a PLACEMENT_REQUEST_REJECTED status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [
    {
      "key": {
        "text": "Rejection reason",
      },
      "value": {
        "text": "Over capacity",
      },
    },
    {
      "key": {
        "text": "Request submitted",
      },
      "value": {
        "text": "10 June 2026 (51 days ago)",
      },
    },
    {
      "key": {
        "text": "Request submitted by",
      },
      "value": {
        "text": "Joe Bloggs",
      },
    },
    {
      "key": {
        "text": "Application expires",
      },
      "value": {
        "text": "29 January 2027",
      },
    },
  ],
  "heading": "Approved premises (CAS1)",
  "hint": undefined,
  "inactive": false,
  "links": [
    {
      "external": true,
      "href": "https://example.com/create-new-placement-request",
      "text": "Create new placement request",
    },
  ],
  "status": {
    "colour": "orange",
    "text": "Placement request rejected",
  },
}
`;

exports[`eligibilityStatusCard for cas1 renders a PLACEMENT_REQUEST_SUBMITTED status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [
    {
      "key": {
        "text": "Request submitted",
      },
      "value": {
        "text": "10 June 2026 (51 days ago)",
      },
    },
    {
      "key": {
        "text": "Request submitted by",
      },
      "value": {
        "text": "Joe Bloggs",
      },
    },
    {
      "key": {
        "text": "Application expires",
      },
      "value": {
        "text": "29 January 2027",
      },
    },
  ],
  "heading": "Approved premises (CAS1)",
  "hint": undefined,
  "inactive": false,
  "links": [
    {
      "external": true,
      "href": "https://example.com/view",
      "text": "View application",
    },
  ],
  "status": {
    "colour": "yellow",
    "text": "Placement request submitted",
  },
}
`;

exports[`eligibilityStatusCard for cas1 renders a PLACEMENT_REQUEST_WITHDRAWN status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [
    {
      "key": {
        "text": "Withdrawal reason",
      },
      "value": {
        "text": "There was an error in the request",
      },
    },
    {
      "key": {
        "text": "Request submitted",
      },
      "value": {
        "text": "10 June 2026 (51 days ago)",
      },
    },
    {
      "key": {
        "text": "Request submitted by",
      },
      "value": {
        "text": "Joe Bloggs",
      },
    },
    {
      "key": {
        "text": "Application expires",
      },
      "value": {
        "text": "29 January 2027",
      },
    },
  ],
  "heading": "Approved premises (CAS1)",
  "hint": undefined,
  "inactive": false,
  "links": [
    {
      "external": true,
      "href": "https://example.com/create-new-placement-request",
      "text": "Create new placement request",
    },
  ],
  "status": {
    "colour": "orange",
    "text": "Placement request withdrawn",
  },
}
`;

exports[`eligibilityStatusCard for cas1 renders a SUBMITTED status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [
    {
      "key": {
        "text": "Submitted",
      },
      "value": {
        "text": "2 June 2026 (59 days ago)",
      },
    },
    {
      "key": {
        "text": "Submitted by",
      },
      "value": {
        "text": "Joe Bloggs",
      },
    },
  ],
  "heading": "Approved premises (CAS1)",
  "hint": undefined,
  "inactive": false,
  "links": [
    {
      "external": true,
      "href": "https://example.com/view",
      "text": "View application",
    },
  ],
  "status": {
    "colour": "yellow",
    "text": "Submitted",
  },
}
`;

exports[`eligibilityStatusCard for cas1 renders a UPCOMING status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [],
  "heading": "Approved premises (CAS1)",
  "hint": "Start referral from 8 November 2026 (in 100 days).",
  "inactive": false,
  "links": undefined,
  "status": {
    "colour": "yellow",
    "text": "Upcoming",
  },
}
`;

exports[`eligibilityStatusCard for cas1 renders a WITHDRAWN status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [],
  "heading": "Approved premises (CAS1)",
  "hint": undefined,
  "inactive": false,
  "links": undefined,
  "status": {
    "colour": "orange",
    "text": "Withdrawn",
  },
}
`;

exports[`eligibilityStatusCard for cas2 renders a AWAITING_ARRIVAL status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [
    {
      "key": {
        "text": "Submitted",
      },
      "value": {
        "text": "2 June 2026 (59 days ago)",
      },
    },
    {
      "key": {
        "text": "Submitted by",
      },
      "value": {
        "text": "Joe Bloggs",
      },
    },
  ],
  "heading": "Short-term accommodation (CAS2)",
  "hint": undefined,
  "inactive": false,
  "links": [
    {
      "external": true,
      "href": "https://example.com/view",
      "text": "View application",
    },
  ],
  "status": {
    "colour": "green",
    "text": "Awaiting arrival",
  },
}
`;

exports[`eligibilityStatusCard for cas2 renders a AWAITING_DECISION status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [
    {
      "key": {
        "text": "Submitted",
      },
      "value": {
        "text": "2 June 2026 (59 days ago)",
      },
    },
    {
      "key": {
        "text": "Submitted by",
      },
      "value": {
        "text": "Joe Bloggs",
      },
    },
  ],
  "heading": "Short-term accommodation (CAS2)",
  "hint": undefined,
  "inactive": false,
  "links": [
    {
      "external": true,
      "href": "https://example.com/view",
      "text": "View application",
    },
  ],
  "status": {
    "colour": "yellow",
    "text": "Awaiting decision",
  },
}
`;

exports[`eligibilityStatusCard for cas2 renders a CANCELLED status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [
    {
      "key": {
        "text": "Reason",
      },
      "value": {
        "text": "Application cancelled",
      },
    },
    {
      "key": {
        "text": "Submitted",
      },
      "value": {
        "text": "2 June 2026 (59 days ago)",
      },
    },
    {
      "key": {
        "text": "Submitted by",
      },
      "value": {
        "text": "Joe Bloggs",
      },
    },
  ],
  "heading": "Short-term accommodation (CAS2)",
  "hint": undefined,
  "inactive": false,
  "links": [
    {
      "external": true,
      "href": "https://example.com/start-new",
      "text": "Start new application",
    },
  ],
  "status": {
    "colour": "orange",
    "text": "Cancelled",
  },
}
`;

exports[`eligibilityStatusCard for cas2 renders a MORE_INFORMATION_NEEDED status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [
    {
      "key": {
        "text": "Submitted",
      },
      "value": {
        "text": "2 June 2026 (59 days ago)",
      },
    },
    {
      "key": {
        "text": "Submitted by",
      },
      "value": {
        "text": "Joe Bloggs",
      },
    },
  ],
  "heading": "Short-term accommodation (CAS2)",
  "hint": undefined,
  "inactive": false,
  "links": [
    {
      "external": true,
      "href": "https://example.com/continue",
      "text": "Continue application",
    },
  ],
  "status": {
    "colour": "orange",
    "text": "More information needed",
  },
}
`;

exports[`eligibilityStatusCard for cas2 renders a NOT_STARTED status card 1`] = `
{
  "blocked": false,
  "content": [
    {
      "html": "<p class="govuk-!-margin-bottom-1">Available in these circumstances:</p>
      <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-0">
        
      <li>Homeless at conditional release date</li>
      <li>Homeless at end of fixed-term recall</li>
      <li>As part of risk-assessed recall review</li>
      </ul>",
    },
    {
      "html": "<a class="govuk-body govuk-link govuk-link--no-visited-state" href="#" target="_blank" rel="noreferrer noopener">Find out more about CAS2 (opens in new tab)</a>",
    },
  ],
  "details": [],
  "heading": "Short-term accommodation (CAS2)",
  "hint": undefined,
  "inactive": false,
  "links": [
    {
      "external": true,
      "href": "https://example.com/start",
      "text": "Start application",
    },
  ],
  "status": {
    "colour": "orange",
    "text": "Not started",
  },
}
`;

exports[`eligibilityStatusCard for cas2 renders a NOT_SUBMITTED status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [
    {
      "key": {
        "text": "Application started",
      },
      "value": {
        "text": "1 June 2026 (60 days ago)",
      },
    },
    {
      "key": {
        "text": "Started by",
      },
      "value": {
        "text": "Joe Bloggs",
      },
    },
  ],
  "heading": "Short-term accommodation (CAS2)",
  "hint": undefined,
  "inactive": false,
  "links": [
    {
      "external": true,
      "href": "https://example.com/continue",
      "text": "Continue application",
    },
  ],
  "status": {
    "colour": "orange",
    "text": "Not submitted",
  },
}
`;

exports[`eligibilityStatusCard for cas2 renders a OFFER_ACCEPTED status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [
    {
      "key": {
        "text": "Submitted",
      },
      "value": {
        "text": "2 June 2026 (59 days ago)",
      },
    },
    {
      "key": {
        "text": "Submitted by",
      },
      "value": {
        "text": "Joe Bloggs",
      },
    },
  ],
  "heading": "Short-term accommodation (CAS2)",
  "hint": undefined,
  "inactive": false,
  "links": [
    {
      "external": true,
      "href": "https://example.com/view",
      "text": "View application",
    },
  ],
  "status": {
    "colour": "yellow",
    "text": "Offer accepted",
  },
}
`;

exports[`eligibilityStatusCard for cas2 renders a OFFER_DECLINED_OR_WITHDRAWN status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [
    {
      "key": {
        "text": "Reason",
      },
      "value": {
        "text": "Offer unsuitable",
      },
    },
    {
      "key": {
        "text": "Submitted",
      },
      "value": {
        "text": "2 June 2026 (59 days ago)",
      },
    },
    {
      "key": {
        "text": "Submitted by",
      },
      "value": {
        "text": "Joe Bloggs",
      },
    },
  ],
  "heading": "Short-term accommodation (CAS2)",
  "hint": undefined,
  "inactive": false,
  "links": [
    {
      "external": true,
      "href": "https://example.com/start-new",
      "text": "Start new application",
    },
  ],
  "status": {
    "colour": "orange",
    "text": "Offer declined or withdrawn",
  },
}
`;

exports[`eligibilityStatusCard for cas2 renders a ON_WAITING_LIST status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [
    {
      "key": {
        "text": "Submitted",
      },
      "value": {
        "text": "2 June 2026 (59 days ago)",
      },
    },
    {
      "key": {
        "text": "Submitted by",
      },
      "value": {
        "text": "Joe Bloggs",
      },
    },
  ],
  "heading": "Short-term accommodation (CAS2)",
  "hint": undefined,
  "inactive": false,
  "links": [
    {
      "external": true,
      "href": "https://example.com/view",
      "text": "View application",
    },
  ],
  "status": {
    "colour": "yellow",
    "text": "On waiting list",
  },
}
`;

exports[`eligibilityStatusCard for cas2 renders a PLACE_OFFERED status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [
    {
      "key": {
        "text": "Submitted",
      },
      "value": {
        "text": "2 June 2026 (59 days ago)",
      },
    },
    {
      "key": {
        "text": "Submitted by",
      },
      "value": {
        "text": "Joe Bloggs",
      },
    },
  ],
  "heading": "Short-term accommodation (CAS2)",
  "hint": undefined,
  "inactive": false,
  "links": [
    {
      "external": true,
      "href": "https://example.com/view",
      "text": "View application",
    },
  ],
  "status": {
    "colour": "yellow",
    "text": "Place offered",
  },
}
`;

exports[`eligibilityStatusCard for cas2 renders a SUBMITTED status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [
    {
      "key": {
        "text": "Submitted",
      },
      "value": {
        "text": "2 June 2026 (59 days ago)",
      },
    },
    {
      "key": {
        "text": "Submitted by",
      },
      "value": {
        "text": "Joe Bloggs",
      },
    },
  ],
  "heading": "Short-term accommodation (CAS2)",
  "hint": undefined,
  "inactive": false,
  "links": [
    {
      "external": true,
      "href": "https://example.com/view",
      "text": "View application",
    },
  ],
  "status": {
    "colour": "yellow",
    "text": "Submitted",
  },
}
`;

exports[`eligibilityStatusCard for cas2 renders a WITHDRAWN status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [
    {
      "key": {
        "text": "Submitted",
      },
      "value": {
        "text": "2 June 2026 (59 days ago)",
      },
    },
    {
      "key": {
        "text": "Submitted by",
      },
      "value": {
        "text": "Joe Bloggs",
      },
    },
  ],
  "heading": "Short-term accommodation (CAS2)",
  "hint": undefined,
  "inactive": false,
  "links": [
    {
      "external": true,
      "href": "https://example.com/start-new",
      "text": "Start new application",
    },
  ],
  "status": {
    "colour": "orange",
    "text": "Withdrawn",
  },
}
`;

exports[`eligibilityStatusCard for cas3 renders a ARRIVED status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [],
  "heading": "CAS3 (transitional accommodation)",
  "hint": undefined,
  "inactive": false,
  "links": undefined,
  "status": {
    "colour": "green",
    "text": "Arrived",
  },
}
`;

exports[`eligibilityStatusCard for cas3 renders a BEDSPACE_OFFERED status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [],
  "heading": "CAS3 (transitional accommodation)",
  "hint": "Bedspace details are sent by email",
  "inactive": false,
  "links": [
    {
      "external": true,
      "href": "https://example.com/view",
      "text": "View referral",
    },
  ],
  "status": {
    "colour": "orange",
    "text": "Bedspace offered",
  },
}
`;

exports[`eligibilityStatusCard for cas3 renders a BOOKING_CANCELLED status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [],
  "heading": "CAS3 (transitional accommodation)",
  "hint": undefined,
  "inactive": false,
  "links": [
    {
      "external": true,
      "href": "https://example.com/view",
      "text": "View referral",
    },
  ],
  "status": {
    "colour": "grey",
    "text": "Booking cancelled",
  },
}
`;

exports[`eligibilityStatusCard for cas3 renders a BOOKING_CONFIRMED status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [],
  "heading": "CAS3 (transitional accommodation)",
  "hint": undefined,
  "inactive": false,
  "links": [
    {
      "external": true,
      "href": "https://example.com/view",
      "text": "View referral",
    },
  ],
  "status": {
    "colour": "green",
    "text": "Booking confirmed",
  },
}
`;

exports[`eligibilityStatusCard for cas3 renders a CANNOT_START_YET, CRS accommodation needed status card 1`] = `
{
  "blocked": true,
  "content": undefined,
  "details": [],
  "heading": "CAS3 (transitional accommodation)",
  "hint": "You need to submit a CRS accommodation referral before you can make a CAS3 referral.",
  "inactive": false,
  "links": undefined,
  "status": {
    "colour": "grey",
    "text": "Cannot start yet",
  },
}
`;

exports[`eligibilityStatusCard for cas3 renders a CANNOT_START_YET, CRS needed status card 1`] = `
{
  "blocked": true,
  "content": undefined,
  "details": [],
  "heading": "CAS3 (transitional accommodation)",
  "hint": "You need to submit a CRS referral before you can make a CAS3 referral.",
  "inactive": false,
  "links": undefined,
  "status": {
    "colour": "grey",
    "text": "Cannot start yet",
  },
}
`;

exports[`eligibilityStatusCard for cas3 renders a CANNOT_START_YET, DTR needed status card 1`] = `
{
  "blocked": true,
  "content": undefined,
  "details": [],
  "heading": "CAS3 (transitional accommodation)",
  "hint": "You need to add DTR referral details before you can make a CAS3 referral.",
  "inactive": false,
  "links": undefined,
  "status": {
    "colour": "grey",
    "text": "Cannot start yet",
  },
}
`;

exports[`eligibilityStatusCard for cas3 renders a CANNOT_START_YET, both DTR and CRS accommodation needed status card 1`] = `
{
  "blocked": true,
  "content": undefined,
  "details": [],
  "heading": "CAS3 (transitional accommodation)",
  "hint": "You need to add DTR referral details and submit a CRS accommodation referral before you can make a CAS3 referral.",
  "inactive": false,
  "links": undefined,
  "status": {
    "colour": "grey",
    "text": "Cannot start yet",
  },
}
`;

exports[`eligibilityStatusCard for cas3 renders a CANNOT_START_YET, both DTR and CRS needed status card 1`] = `
{
  "blocked": true,
  "content": undefined,
  "details": [],
  "heading": "CAS3 (transitional accommodation)",
  "hint": "You need to add DTR referral details and submit a CRS referral before you can make a CAS3 referral.",
  "inactive": false,
  "links": undefined,
  "status": {
    "colour": "grey",
    "text": "Cannot start yet",
  },
}
`;

exports[`eligibilityStatusCard for cas3 renders a NOT_ELIGIBLE status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [],
  "heading": "CAS3 (transitional accommodation)",
  "hint": "Not at risk of homelessness.",
  "inactive": true,
  "links": undefined,
  "status": {
    "colour": "grey",
    "text": "Not eligible",
  },
}
`;

exports[`eligibilityStatusCard for cas3 renders a NOT_STARTED status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [],
  "heading": "CAS3 (transitional accommodation)",
  "hint": undefined,
  "inactive": false,
  "links": [
    {
      "external": true,
      "href": "https://example.com/start",
      "text": "Start referral",
    },
  ],
  "status": {
    "colour": "orange",
    "text": "Not started",
  },
}
`;

exports[`eligibilityStatusCard for cas3 renders a REJECTED status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [],
  "heading": "CAS3 (transitional accommodation)",
  "hint": undefined,
  "inactive": false,
  "links": [
    {
      "external": true,
      "href": "https://example.com/start-new",
      "text": "Start new referral",
    },
  ],
  "status": {
    "colour": "orange",
    "text": "Rejected",
  },
}
`;

exports[`eligibilityStatusCard for cas3 renders a SUBMITTED status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [],
  "heading": "CAS3 (transitional accommodation)",
  "hint": undefined,
  "inactive": false,
  "links": [
    {
      "external": true,
      "href": "https://example.com/view",
      "text": "View referral",
    },
  ],
  "status": {
    "colour": "yellow",
    "text": "Submitted",
  },
}
`;

exports[`eligibilityStatusCard for cas3 renders a UPCOMING status card 1`] = `
{
  "blocked": false,
  "content": undefined,
  "details": [],
  "heading": "CAS3 (transitional accommodation)",
  "hint": "Start referral from 15 December 2026 (in 137 days).",
  "inactive": false,
  "links": undefined,
  "status": {
    "colour": "yellow",
    "text": "Upcoming",
  },
}
`;

exports[`eligibilityToEligibilityCards returns an array of eligibility card objects 1`] = `
[
  {
    "details": [
      {
        "key": {
          "text": "Submitted to",
        },
        "value": {
          "text": "Some Council",
        },
      },
      {
        "key": {
          "text": "Reference",
        },
        "value": {
          "text": "REF123",
        },
      },
      {
        "key": {
          "text": "Submitted",
        },
        "value": {
          "text": "1 December 2025 (51 days ago)",
        },
      },
      {
        "key": {
          "text": "Submitted by",
        },
        "value": {
          "text": "user1",
        },
      },
    ],
    "heading": "Duty to Refer (DTR)",
    "hint": undefined,
    "inactive": false,
    "links": [
      {
        "href": "/cases/X123456/dtr/some-id/details",
        "text": "View referral",
      },
    ],
    "status": {
      "colour": "green",
      "text": "Accepted",
    },
  },
  {
    "details": [
      {
        "key": {
          "text": "Submitted",
        },
        "value": {
          "text": "30 November 2025 (52 days ago)",
        },
      },
    ],
    "heading": "Commissioned Rehabilitative Services (CRS)",
    "hint": undefined,
    "inactive": false,
    "links": [
      {
        "external": true,
        "href": "https://example.com/view-referral",
        "text": "View referral",
      },
    ],
    "status": {
      "colour": "yellow",
      "text": "Submitted",
    },
  },
  {
    "blocked": false,
    "content": undefined,
    "details": [],
    "heading": "Approved premises (CAS1)",
    "hint": undefined,
    "inactive": false,
    "links": [
      {
        "external": true,
        "href": "https://example.com/start-application",
        "text": "Start application",
      },
    ],
    "status": {
      "colour": "orange",
      "text": "Not started",
    },
  },
  {
    "blocked": false,
    "content": undefined,
    "details": [],
    "heading": "CAS3 (transitional accommodation)",
    "hint": undefined,
    "inactive": false,
    "links": [
      {
        "external": true,
        "href": "https://example.com/view-referral",
        "text": "Continue referral",
      },
    ],
    "status": {
      "colour": "orange",
      "text": "Not submitted",
    },
  },
]
`;
